--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=procurement-system
 
 #마리아디비 연결
-spring.datasource.driver-class-name="org.mariadb.jdbc.Driver"
-spring.datasource.url="jdbc:mariadb://localhost:3307/testgam"
-spring.datasource.username="testgamid"
-spring.datasource.password="testgampw"
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://192.168.1.41:3307/junggamdb
+spring.datasource.username=nahyeon
+spring.datasource.password=123456
 
 
