데이터베이스연결5
방금꺼 쌍따옴표 추가했더니 안 됨 다시 삭제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=procurement-system
 
-#마리아디비 설정 파일
-spring.datasource.driver-class-name="org.mariadb.jdbc.Driver"
-spring.datasource.url="jdbc:mariadb://43.203.181.48:3306/junggamdb"
-spring.datasource.username="nahyeon"
-spring.datasource.password="12345"
+#마리아디비연결
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://43.203.181.48:3306/junggamdb
+spring.datasource.username=nahyeon
+spring.datasource.password=12345
 
 
