--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spring.datasource.url=jdbc:mariadb://43.203.181.48:3306/junggamdb
 spring.datasource.username=nahyeon
 spring.datasource.password=12345
 
+#jpa설정
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+spring.thymeleaf.cache=false
