데이터베이스 변경, 샘플로 구매발주의 발주서 페이지 생성
데이터베이스:
원래서버에서 각자서버로 변경함
사용자도 합의하여 결정

샘플로 구매발주 발주서페이지 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=procurement-system
 
 #마리아디비연결
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://43.203.181.48:3306/junggamdb
-spring.datasource.username=nahyeon
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3307/junggamdb
+spring.datasource.username=junggamid
 spring.datasource.password=12345
 
 #jpa설정
@@ -12,3 +12,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.thymeleaf.cache=false
+
+#★★★★★★★★여기 수정할 일 생기면 서로 얘기 하고 합시다★★★★★★★★★★★★
