제품 작업중 3
제품
생성(미완): 리포지토리(제품), 컨트롤러(제품), 등록테스트화면
변경: 엔티티(제품,유닛,자재)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 
 #★★★★★★★★여기 수정할 일 생기면 서로 얘기 하고 합시다★★★★★★★★★★★★
+logging.level.org.springframework=DEBUG
